alignment problem solved

--- a/CSS Task/style3.css
+++ b/CSS Task/style3.css
@@ -8,7 +8,7 @@
 
 .light {
     opacity: 0.7;
-    height: 10px;
+    /* height: 10px; */
 }
 
 nav {
@@ -322,7 +322,7 @@ nav li a:hover {
 }
 
 .container5 {
-    width: 1000px;
+    max-width: 1000px;
     margin: 50px auto;
     padding: 10px;
     display: flex;
@@ -360,7 +360,7 @@ nav li a:hover {
 }
 
 .container6 {
-    width: 1000px;
+    max-width: 1000px;
     margin: 0px auto;
     padding: 20px 10px;
     display: flex;
@@ -428,7 +428,7 @@ nav li a:hover {
 }
 
 .container7 {
-    width: 1000px;
+    max-width: 1000px;
     margin: 0px auto;
     padding: 20px 10px;
     display: flex;
@@ -479,7 +479,7 @@ nav li a:hover {
 }
 
 .container8 {
-    width: 1000px;
+    max-width: 1000px;
     margin: 0px auto;
     padding: 20px 10px;
     display: flex;
@@ -537,7 +537,7 @@ footer {
 }
 
 .foot {
-    width: 1000px;
+    max-width: 1000px;
     margin: 0px auto;
     padding: 0 10px;
     /* display: flex;
